Markdown style and update

--- a/README
+++ b/README
@@ -1,23 +1,24 @@
-Summary
+DCPU-16 custom tools
+--------------------
 
 	This is a C++ implementation of the DCPU16 from Mojang's game 0x10c.
 	It is based on the 1.7 specification (see doc directory).
 	0x10c's website : http://0x10c.com/
 
 Current features
+----------------
 
 	- DASM16 assembler
-	- Hardware commands
-	- Interrupts
 	- LEM1802 emulation (changing palette/border color is not supported yet)
 	- Generic Keyboard emulation
 	- Generic Clock emulation
-	- CPU state display with an overlay by hitting TAB
+	- Instant CPU state display with an overlay by hitting TAB
 	- Auto textual memory dump before and after running
 	- Font image converter (image 128x32 ==> DASM code)
-	- Basic preprocessor (only a 1-level #include is supported)
+	- Basic preprocessor (still WIP, only a 1-level #include is supported)
 
 Planned features
+----------------
 
 	- Print help in command line
 	- N-level #include with infinite inclusion checking
@@ -26,23 +27,26 @@ Planned features
 	- More hardware devices (Custom speakers?)
 	- Better support for implemented hardware devices
 	- Debug tools / disassembler
-	- IDE?
+	- Games and IDE?
 
 Releases
+--------
 
-	Not available for now, I should upload Linux binaries soon.
-	Windows binaries will come after for stable releases only.
+	Not available for now, I should upload binaries soon.
 
 Compiling / dependencies
+------------------------
+
+	SFML 2.0 : http://www.sfml-dev.org/
 	
-	SFML 1.6 : http://www.sfml-dev.org/index.php
-	
-	The project is compiled with GCC.
+	The project is compiled with GCC/MinGW.
+	C++11 is not used yet.
 	
 	Note: don't include src/dcpu11 to your project if you want to compile,
 		this directory contains an outdated version of the emulator for 1.1 specs.
 
 How to use
+----------
 
 	In the command line :
 	
